--- a/src/app/compnents/user/user.component.html
+++ b/src/app/compnents/user/user.component.html
@@ -1,32 +1,32 @@
 <div id="user" class="col-lg-3 col-md-3">
-    <div>
-      <div class="profile-sidebar">
- 
-        <!--USERPIC -->
-        <div class="profile-userpic">
-          <img src="\assets\img\סמל.png" class="img-responsive" alt="">
+  <div>
+    <div class="profile-sidebar">
+
+      <!--USERPIC -->
+      <div class="profile-userpic">
+        <img src="\assets\img\סמל.png" class="img-responsive" alt="">
+      </div>
+      <!--USER TITLE-->
+      <div class="profile-usertitle">
+        <div class="profile-usertitle-name">
         </div>
-        <!--USER TITLE-->
-        <div class="profile-usertitle">
-          <div class="profile-usertitle-name">
-          </div>
-          <div class="profile-usertitle-job">
-            Teacher
-          </div>
+        <div class="profile-usertitle-job">
+          Teacher
         </div>
-        <!--BUTTONS--> 
-        <div class="profile-userbuttons">
-          <button type="button" class="btn btn-danger btn-sm" id="sendMasageBtn" name="sendMasageBtn">Messages</button>
-        </div>
-        <!-- MENU-->
-        <div class="profile-usermenu">
-            <nav>
+      </div>
+      <!--BUTTONS-->
+      <div class="profile-userbuttons">
+        <button type="button" class="btn btn-danger btn-sm" id="sendMasageBtn" name="sendMasageBtn">Messages</button>
+      </div>
+      <!-- MENU-->
+      <div class="profile-usermenu">
+        <nav>
           <ul>
-          
+
             <li routerLink="./diploma" routerLinkActive="active">
               <a>
                 <i class="glyphicon glyphicon-user"></i>
-               תעודות </a>
+                תעודות </a>
             </li>
             <li routerLink="./enter">
               <a>
@@ -34,20 +34,25 @@
                 הזנת ציונים</a>
             </li>
             <li routerLink="./statistics">
-                <a>
-                  <i class="glyphicon glyphicon-ok"></i>
-                 סטטיסטיקות</a>
-              </li>
-              <li routerLink="./pdf">
-                <a>
-                  <i class="glyphicon glyphicon-ok"></i>
-                 pdf</a>
-              </li>
+              <a>
+                <i class="glyphicon glyphicon-ok"></i>
+                סטטיסטיקות</a>
+            </li>
+            <li routerLink="./pdf">
+              <a>
+                <i class="glyphicon glyphicon-ok"></i>
+                pdf</a>
+            </li>
+            <li routerLink="./students">
+              <a>
+                <i class="glyphicon glyphicon-ok"></i>
+                צפיה בפרטי תלמידים</a>
+            </li>
           </ul>
         </nav>
-        </div>
-
       </div>
+
     </div>
   </div>
-  <router-outlet></router-outlet>
+</div>
+<router-outlet></router-outlet>
