--- a/src/app/update-details/update-details.component.html
+++ b/src/app/update-details/update-details.component.html
@@ -1,12 +1,13 @@
-<form>
+<form (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="email" class="form-control" [(ngModel)]="user.email" name="email" id="exampleInputEmail1"
+            aria-describedby="emailHelp">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <label for="exampleInputPassword1" name="password">Password</label>
+        <input type="password" [(ngModel)]="user.password" name="pass" class="form-control" id="exampleInputPassword1">
     </div>
     <div class="form-group form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
