i dont know what happen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
+ 
     <img width="50" 
 src="src\assets\img\סמל.png">   
- <span>Welcome</span>
+ <span >Welcome</span>
+ <a routerLink="login">login |  </a>
+ <a routerLink="user"> user | </a>
     <div class="spacer"></div>
     <a aria-label="Angular on twitter" target="_blank" rel="noopener" href="https://twitter.com/angular" title="Twitter">
   
@@ -12,8 +15,7 @@ src="src\assets\img\סמל.png">
           <style>
             .cls-1 {
               fill: none;
-            }
-  
+            } 
             .cls-2 {
               fill: #ffffff;
             }
@@ -26,4 +28,4 @@ src="src\assets\img\סמל.png">
   
     </a>
   </div>
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet> 
