--- a/src/app/compnents/user/user.component.html
+++ b/src/app/compnents/user/user.component.html
@@ -1,3 +1,7 @@
+<a routerLink="diploma">  diploma | </a>
+<a routerLink="enter">  enter grades | </a>
+<a routerLink="statistics">  statistics | </a>
+<a routerLink="pdf" >pdf</a>
 <div id="user" class="col-lg-3 col-md-3">
     <div>
       <div class="profile-sidebar">
@@ -6,6 +10,7 @@
         <div class="profile-userpic">
           <img src="\assets\img\סמל.png" class="img-responsive" alt="">
         </div>
+
         <!--USER TITLE-->
         <div class="profile-usertitle">
           <div class="profile-usertitle-name">
@@ -50,4 +55,4 @@
       </div>
     </div>
   </div>
-  <router-outlet></router-outlet>
+  <router-outlet></router-outlet> 
