--- a/src/app/update-details/update-details.component.html
+++ b/src/app/update-details/update-details.component.html
@@ -1,33 +1,55 @@
 <form [formGroup]="dochSearchForm" (ngSubmit)="onSubmit()">
+    <!--div class="data-d-col d-flex flex-column" [ngClass]="{ 'field-error': reformaForm.get('heara').enabled && !reformaForm.get('heara').valid && reformaForm.get('heara').dirty }">
+        <label for="heara">{{ 'OHPModule.ReformaFormComponent.hearaLabel' | translate }}</label>
+        <textarea class="edit-comment" id="heara" formControlName="heara" maxlength="500"></textarea>
+  
+        <span class="error-text" *ngIf="reformaForm.get('heara').hasError('maxlength') && reformaForm.get('heara').dirty">maxlength
+          500 characters</span>
+          <span class="error-text" *ngIf="reformaForm.get('heara').hasError('required') && reformaForm.get('heara').dirty">{{
+              'ValidationMsg.required' | translate }}</span>
+          </div-->
     <div class="form-group">
         <label  for="id" name="id">Id</label>
-        <input type="number"  name="id"  formControlName="id"  class="form-control" />
+        <input  name="id"  formControlName="id"  class="form-control"   [ngClass]="{ 'field-error': !dochSearchForm.get('id').valid }"/>
+        <span class="error-text" *ngIf="dochSearchForm.get('id').hasError('required')">Invalid input</span>
+         <span class="error-text" *ngIf="dochSearchForm.get('id').hasError('pattern')">Put must 9 Numbers!</span>  
     </div>
+    <!-- field-error { -->
+<!--  -->
     <div class="form-group">
         <label for="firstName" name="FirstName">FirstName</label>
-        <input type="text" formControlName="firstName"  formControlName="firstName"  name="firstName" class="form-control" >
+        <input type="text" formControlName="firstName"  formControlName="firstName"  name="firstName" class="form-control" [ngClass]="{ 'field-error': !dochSearchForm.get('firstName').valid }" >
+        <span class="error-text" *ngIf="dochSearchForm.get('firstName').hasError('pattern')"> must letters</span> 
+        <span class="error-text" *ngIf="dochSearchForm.get('firstName').hasError('required')">Invalid input</span>
     </div>
     <div class="form-group">
         <label for="lastName" name="LastName">LastName</label>
-        <input type="text"   name="lastName" formControlName="lastName" class="form-control">
+        <input type="text"   name="lastName" formControlName="lastName" class="form-control" [ngClass]="{ 'field-error': !dochSearchForm.get('lastName').valid }">
+        <span class="error-text" *ngIf="dochSearchForm.get('lastName').hasError('pattern')"> must letters</span>
+        <span class="error-text" *ngIf="dochSearchForm.get('lastName').hasError('required')">Invalid input</span> 
     </div>
     <div class="form-group">
         <label for="codeMosad" name="CodeMosad">Code mosad</label>
-        <input type="number"  name="codeMosad"   formControlName="codeMosad"  class="form-control" id="exampleInputCodeMosad1">
+        <input type="number"  name="codeMosad"   formControlName="codeMosad"  class="form-control" id="exampleInputCodeMosad1"  [ngClass]="{ 'field-error': !dochSearchForm.get('codeMosad').valid }">
+        <span class="error-text" *ngIf="dochSearchForm.get('codeMosad').hasError('pattern')"> Must numbers</span>
+        <span class="error-text" *ngIf="dochSearchForm.get('codeMosad').hasError('required')">Invalid input</span> 
     </div>
     <div class="form-group">
         <label for="phone" name="Phone">Phone</label>
-        <input type="text"   name="phone" formControlName="phone" class="form-control" id="exampleInputPhone1">
+        <input type="text"   name="phone" formControlName="phone" class="form-control" id="exampleInputPhone1" [ngClass]="{ 'field-error': !dochSearchForm.get('phone').valid }">
+        <span class="error-text" *ngIf="dochSearchForm.get('phone').hasError('pattern')"> Must valid phone</span>
     </div>
     <div class="form-group">
         <label for="email">Email address</label>
         <input type="email" formControlName="email" class="form-control"  name="email" id="exampleInputEmail1"
-            aria-describedby="emailHelp">
+            aria-describedby="emailHelp" [ngClass]="{ 'field-error': !dochSearchForm.get('email').valid }">
+            <span class="error-text" *ngIf="dochSearchForm.get('email').hasError('email')"> Must valid mail</span>
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
         <label for="password" name="password">Password</label>
-        <input type="password" formControlName="password"  name="password" class="form-control" id="exampleInputPassword1">
+        <input type="password" formControlName="password"  name="password" class="form-control" id="exampleInputPassword1" [ngClass]="{ 'field-error': !dochSearchForm.get('password').valid }">
+        <span class="error-text" *ngIf="dochSearchForm.get('password').hasError('required')">Invalid input</span> 
     </div>
     <div class="form-group form-check">
         <input formControlName="codeMosad"  type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -36,11 +58,3 @@
  
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-<!-- 
-id: string;
-    firstName: string;
-    lastName: string;
-    codeMosad: number;
-    phone?: string;
-    email?: string;
-    password?: string; -->
